app/assets/stylesheets/application.scss
// Custom bootstrap variables must be set or imported *before* bootstrap.
// @import "bootstrap-sprockets";
@import "bootstrap";

/* universal */


/* home */
.home-bg {
  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), image-url('home_bg.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

/* user page */
.profile-card {
  background-color: $gray-500;
  border-radius: 10px;
}

.avatar {
  background-color: $gray-200;
  max-width: 100px;
  max-height: auto;
  border-radius: 100%;
}

/* miscellaneous */
.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 2rem;
}

